azurek8s/apache.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-10-19T12:53:00Z"
  labels:
    run: apache
  name: apache
  namespace: app-space
spec:
  containers:
  - image: httpd
    imagePullPolicy: Always
    name: apache
    ports:
    - containerPort: 80
      protocol: TCP
