azurek8s/index-app.yaml

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: app-space
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx
  // need to make a docker image with the bootstrap in it
