azurek8s/OLDsvc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2020-10-15T18:33:29Z"
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:ports:
            .: {}
            k:{"port":80,"protocol":"TCP"}:
              .: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:app: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: kubectl-create
      operation: Update
      time: "2020-10-15T18:33:29Z"
    name: default-http-backend
    namespace: app-space
    resourceVersion: "960"
    selfLink: /api/v1/namespaces/app-space/services/default-http-backend
    uid: dd24cc94-9e30-4b49-9dc7-b134a639ab2a
  spec:
    clusterIP: 10.111.21.130
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: default-backend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2020-10-15T18:33:27Z"
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:ports:
            .: {}
            k:{"port":8080,"protocol":"TCP"}:
              .: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:app: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: kubectl-create
      operation: Update
      time: "2020-10-15T18:33:27Z"
    name: video-service
    namespace: app-space
    resourceVersion: "936"
    selfLink: /api/v1/namespaces/app-space/services/video-service
    uid: 135f853a-655c-40f1-86a2-1dba4e7d92e2
  spec:
    clusterIP: 10.107.89.21
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: webapp-video
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2020-10-15T18:33:26Z"
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:ports:
            .: {}
            k:{"port":8080,"protocol":"TCP"}:
              .: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:app: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: kubectl-create
      operation: Update
      time: "2020-10-15T18:33:26Z"
    name: wear-service
    namespace: app-space
    resourceVersion: "921"
    selfLink: /api/v1/namespaces/app-space/services/wear-service
    uid: 3d4d985f-3716-4eb7-879c-0d04d71a4a50
  spec:
    clusterIP: 10.97.120.143
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: webapp-wear
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
